email verification almost there...

--- a/signup-verify.html
+++ b/signup-verify.html
@@ -7,7 +7,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-       <h1>Signup</h1>
-       <p>You're almost there! Check your email to activate your account</p>
+       <h1>Verify your Account</h1>
+       <p>You're almost there! Check your email to verify your account</p>
     </body>
 </html>
