email verifcation working, log out working

--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
         <form action="signup-processing.php" method="POST">
             <div id="the-form">
                 <h1>Sign Up</h1>
-                <p>Already have an account? <a href="login.html">Log in</a></p>
+                <p>Already have an account? <a href="login.php">Log in</a></p>
                 <div>
                     <input id="name" name="name" type="text" placeholder="Name" required>
                 </div>
